--- a/spring-boot-hello/pom.xml
+++ b/spring-boot-hello/pom.xml
@@ -26,6 +26,8 @@
 		<tomcat.version>8.0.11</tomcat.version>
 		<h2.version>1.4.181</h2.version>
 		<hibernate-validator.version>5.1.2.Final</hibernate-validator.version>
+		<junit.version>4.11</junit.version>
+		<hamcrest.version>1.3</hamcrest.version>
 	</properties>
 
 	<dependencies>
@@ -45,6 +47,11 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
